# analytics

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: dashboard_modification.yaml  job_modification.md  stack_modification.md
.github/PULL_REQUEST_TEMPLATE/: general_code_pr.md
.github/scripts/: collect_metrics.py
.github/workflows/: collect_metrics.yml
iac/: app.py  pyproject.toml  regional_stack.py  root_env_stack.py
iac/access_stack/: access_stack.py
iac/persistence_stack/: persistence_stack.py
iac/sql_stack/: sql_stack.py
scripts/: delete_all_versioned_s3_objects.sh  github_analytics.sql  grafana_executon_role.json  membership_analytics.sql  pypi_analytics.sql
src/msck_repair/: Dockerfile  README.md  build.sh  push.sh  pyproject.toml  run.sh
src/msck_repair/src/: msck_repair.py
src/pypi/: Dockerfile  README.md  build.sh  push.sh  pyproject.toml  run.sh
src/pypi/src/: pypi.py
